--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -161,7 +161,7 @@ footer {
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
-.cart-table th, .cart-table td {
+.cart-table th{
     padding: 1rem;
     text-align: center;
     border-bottom: 1px solid #ddd;
